# hypo-churn

./: .dockerignore  .gitignore  API_SECURITY.md  CLAUDE.md  DOCKER_README.md  Dockerfile  LICENSE  Makefile  QUICKSTART_DATASETS.md  README.md  docker-compose.yml  pyproject.toml  requirements.txt  test_api_docker.py
.claude/: settings.local.json
.claude/agents/: mortgage-churn-data-researcher.md
api/: README.md  __init__.py  main.py  requirements.txt  test_api.py
data/: DATASET_RESEARCH.md
data/processed/: banking_churn_mortgage_adapted.csv
examples/: inference_example.py
models/: model_comparison.csv
notebooks/: 01_banking_churn_eda.ipynb  01_banking_churn_eda_executed.ipynb  02_model_training.ipynb  03_advanced_training_xgboost.ipynb  03_advanced_training_xgboost_berechnet.ipynb
scripts/: README.md  download_datasets.py  predict.py
src/hypo_churn/: __init__.py  data_preprocessing.py  evaluation.py  inference.py  models.py
tests/: __init__.py  test_data_preprocessing.py  test_data_preprocessing_complete.py  test_evaluation.py  test_models.py
